<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ProyectoPST</string>
    <string name="real_time_sensor_data">Datos de Sensores en Tiempo Real</string>
    <string name="room_title">Sala</string>
    <string name="kitchen_title">Cocina</string>
    <string name="temperature">Temperatura</string>
    <string name="humidity">Humedad</string>
    <string name="co_level">Nivel de CO</string>
</resources>
